Added some styling to browser

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
 </head>
 
-<body>
+<body id="bodie">
     <div class= "container">
         <div class="jumbotron">
-            <h1 class="display-4">Bullet Express Time</h1>
-            <p class="lead">Local Train Departure and Arrival</p>
+            <h1 class="display-4"><strong>Bullet Express Time</strong></h1>
+            <p class="lead"><Strong>Local Train Departure and Arrival</Strong></p>
         </div>
         <div class="row">
 
