Added Placeholders in input

--- a/index.html
+++ b/index.html
@@ -61,28 +61,28 @@
                                 <div class="input-group-prepend">
 
                                 </div>
-                                <input type="text" class="form-control" id="name-input" aria-describedby="basic-addon3">
+                                <input type="text" class="form-control" id="name-input" placeholder="Polar Express" aria-describedby="basic-addon3">
                             </div>
                             <label for="basic-url">Destination</label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
 
                                 </div>
-                                <input type="text" class="form-control" id="dest-input" aria-describedby="basic-addon3">
+                                <input type="text" class="form-control" id="dest-input" placeholder="North Pole" aria-describedby="basic-addon3">
                             </div>
                             <label for="basic-url">First Train Time (HH:mm - military time)</label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
 
                                 </div>
-                                <input type="text" class="form-control" id="time-input" aria-describedby="basic-addon3">
+                                <input type="text" class="form-control" id="time-input" placeholder="06:00" aria-describedby="basic-addon3">
                             </div>
                             <label for="basic-url">Frequency (min)</label>
                             <div class="input-group mb-3">
                                 <div class="input-group-prepend">
 
                                 </div>
-                                <input type="text" class="form-control" id="freq-input" aria-describedby="basic-addon3">
+                                <input type="text" class="form-control" id="freq-input" placeholder="30" aria-describedby="basic-addon3">
                             </div>
                             <button href="#" id="add-train" class="btn btn-primary">Submit</button>
                         </form>
